fix padding/spacing on search boxes

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -2,3 +2,16 @@
   max-height: 35vh;
   overflow: hidden;
 }
+.searchbox {
+  margin: 0px;
+  padding: 0px;
+}
+.searchbox-left {
+  margin: 0px;
+  padding: 0px;
+  margin-right: 8px;
+}
+.searchbox-right {
+  margin: 0px;
+  padding: 0px;
+}
