--- a/src/app/search/search.page.scss
+++ b/src/app/search/search.page.scss
@@ -1,3 +1,16 @@
 ion-icon {
   vertical-align: middle;
 }
+.searchbox {
+  margin: 0px;
+  padding: 0px;
+}
+.searchbox-left {
+  margin: 0px;
+  padding: 0px;
+  margin-right: 8px;
+}
+.searchbox-right {
+  margin: 0px;
+  padding: 0px;
+}
